dataset1235/2025-2/2947369575/users/476625416/executions/3873599344_2149359571.log
== SUBMISSION (2025-08-20 22:41:38)
-- CODE: 
print("90-55=45")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
90-55=45
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
90-55=45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:42:06)
-- CODE: 
print(90-55)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:41:27)
-- CODE: 
print(90-55=45)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    print(90-55=45)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    print(90-55=45)
          ^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
